--- a/index.html
+++ b/index.html
@@ -5,9 +5,246 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div class="welcome">
+		<div class="welcome-img">
+		<div class="nav">
+			<li><a href="">WELCOME</a></li>
+			<li><a href="">MENU</a></li>
+			<li><a href="">EVENTS</a></li>
+			<li><a href="">CONTACTS</a></li>
+		</div>
+		<div class="welcome-info">
+			<div class="info-logo"></div>
+			<div class="info-title">NEW OPENING <span>23RD SEPT</span></div>
+			<div class="info-button">LEARN MORE</div>
+		</div>
+	</div>
+</div>
+
+<div class="offer">
+	<div class="offer-text">
+		<div class="text-title">What do we actually cook?</div>
+		<div class="text-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae ducimus, cupiditate corrupti velit nulla ex numquam veritatis! Rem nihil sequi quibusdam autem.</div>
+	</div>
+	<div class="offer-image"></div>
+</div>
+
+<div class="offer-footer">
+	<div class="offer-item1">
+		<div class="item-img"></div>
+		<div class="item-title">New tastes</div>
+		<div class="item-subtitle">Lorem ipsum dolor sit amet, consect adipisicing elit. Recusandae ducimus, cupiditate corrupti velit nulla ex num.</div>
+	</div>
+	<div class="offer-item2">
+		<div class="item-img"></div>
+		<div class="item-title">New dishes cooking</div>
+		<div class="item-subtitle">Lorem ipsum dolor sit amet, consect adipisicing elit. Recusandae ducimus, cupiditate corrupti velit nulla ex num.</div>
+	</div>
+	<div class="offer-item3">
+		<div class="item-img"></div>
+		<div class="item-title">New restaurant</div>
+		<div class="item-subtitle">Lorem ipsum dolor sit amet, consect adipisicing elit. Recusandae ducimus, cupiditate corrupti velit nulla ex num.</div>
+	</div>
+</div>
+
+<div class="gallery">
+	<div class="gallery-container">
+	<div class="gallery-top">
+		<div class="gallery-title">We bring traditiion</div>
+		<div class="gallery-subtitle">TO YOUR PLATE</div>
+	</div>
+	<div class="gallery-bottom">
+		<div class="gallery-item-photo-1"></div>
+		<div class="gallery-item-text">
+			<div class="text-title">California Sushi</div>
+			<div class="text-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do</div>
+			<div class="text-price">$14.95</div>
+		</div>
+		<div class="gallery-item-photo-2"></div>
+		<div class="gallery-item-text">
+			<div class="text-title">Traditional Wok</div>
+			<div class="text-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do</div>
+			<div class="text-price">$14.95</div>
+		</div>
+		<div class="gallery-item-text">
+			<div class="text-title">Poke Bowl</div>
+			<div class="text-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do</div>
+			<div class="text-price">$14.95</div>
+		</div>
+		<div class="gallery-item-photo-3"></div>
+		<div class="gallery-item-text">
+			<div class="text-title">Fresh Salmon</div>
+			<div class="text-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do</div>
+			<div class="text-price">$16.95</div>
+		</div>
+		<div class="gallery-item-photo-4"></div>
+		<div class="gallery-item-photo-5"></div>
+		<div class="gallery-item-text">
+			<div class="text-title">Avocade Sushi</div>
+			<div class="text-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do</div>
+			<div class="text-price">$14.95</div>
+		</div>
+		<div class="gallery-item-photo-6"></div>
+		<div class="gallery-item-text">
+			<div class="text-title">King Sushi</div>
+			<div class="text-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do</div>
+			<div class="text-price">$14.95</div>
+		</div>
 	
+	</div>
+</div>
+</div>
+
+<div class="things">
+	<div class="things-title">We like to keep things simple</div>
+	<div class="things-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit suscipit cumque esse architecto rem enim alias sed dolore! Ullam, commodi?</div>
+	<div class="things-images">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+	<div class="things-photo"></div>
+</div>
+
+<div class="menu">
+	<div class="menu-top">
+		<div class="menu-title">Discover</div>
+		<div class="menu-subtitle">OUR NEW MENU</div> 
+	</div>
+	<div class="menu-bottom">
+		<div class="menu-bottom-one">
+
+			<div class="menu-item-one">
+				<div class="item-image"><div></div></div>
+				<div class="item-text">
+					<div class="item-title">Nigiri with our best fish</div>
+					<div class="item-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do oculis <span class="price">$14.95</span></div>
+				</div>
+			</div>
+			<div class="menu-item-two">
+				<div class="item-image"><div></div></div>
+				<div class="item-text">
+					<div class="item-title">Suchi Complete Variety</div>
+					<div class="item-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do oculis <span class="price">$14.95</span></div>
+				</div>
+			</div>
+			<div class="menu-item-three">
+				<div class="item-image"><div></div></div>
+				<div class="item-text">
+					<div class="item-title">Uramaki made with the best ingredients</div>
+					<div class="item-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do oculis <span class="price">$14.95</span></div>
+				</div>
+			</div>
+
+
+		</div>
+		<div class="menu-bottom-two">
+			<div class="menu-item-one">
+				<div class="item-image"><div></div></div>
+				<div class="item-text">
+					<div class="item-title">Ramen is part of our cuisine</div>
+					<div class="item-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do oculis <span class="price">$14.95</span></div>
+				</div>
+			</div>
+			<div class="menu-item-two">
+				<div class="item-image"><div></div></div>
+				<div class="item-text">
+					<div class="item-title">Sashimi for fish lovers</div>
+					<div class="item-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do oculis <span class="price">$14.95</span></div>
+				</div>
+			</div>
+			<div class="menu-item-three">
+				<div class="item-image"><div></div></div>
+				<div class="item-text">
+					<div class="item-title">Sushi rice the traditional way</div>
+					<div class="item-subtitle">Lorem Ipsum dolor sit amet, consectetur adipising elit sed do oculis <span class="price">$14.95</span></div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+<div class="image"></div>
+
+<div class="here">
+	<div class="here-title">Book here</div>
+	<div class="here-bottom">
+		<div class="here-item">
+			<div>How many people?</div>
+			<div><input type="text"></div>
+		</div>
+		<div class="here-item">
+			<div>When is your date</div>
+			<div><input type="text"></div>
+		</div>
+		<div class="here-item">
+			<div>Time</div>
+			<div><input type="text"></div>
+		</div>
+		<div class="here-item">
+			<div>Name</div>
+			<div><input type="text"></div>
+		</div>
+		<div class="here-item">
+			<div>Email</div>
+			<div><input type="text"></div>
+		</div>
+		<div class="here-item">
+			<div>Phone</div>
+			<div><input type="text"></div>
+		</div>
+	</div>
+	<div class="here-button">SUBMIT</div>
+</div>
+
+<div class="image2"></div>
+
+<div class="menu2">
+	<div class="menu2-top">
+		<div class="menu2-title">Discover</div>
+		<div class="menu2-subtitle">OUR NEW MENU</div>
+	</div>
+	<div class="menu2-bottom">
+		<div class="menu2-item">
+			<div class="menu2-photo photo-one"></div>
+			<div class="menu2-date">Food / 16th March, 2019</div>
+			<div class="menu2-titles">Lorem insum dolor sit</div>
+			<div class="menu2-subtitles">Lorem ipsum dolor sit amet consectetur adipising elit, sed</div>
+			<div class="menu2-button">READ MORE</div>
+		</div>
+		<div class="menu2-item">
+			<div class="menu2-photo photo-two"></div>
+			<div class="menu2-date">Spices / 16th March, 2019</div>
+			<div class="menu2-titles">Lorem insum dolor sit</div>
+			<div class="menu2-subtitles">Lorem ipsum dolor sit amet consectetur adipising elit, sed</div>
+			<div class="menu2-button">READ MORE</div>
+		</div>
+		<div class="menu2-item">
+			<div class="menu2-photo photo-three"></div>
+			<div class="menu2-date">Chicken Curry / 16th March, 2019</div>
+			<div class="menu2-titles">Lorem insum dolor sit</div>
+			<div class="menu2-subtitles">Lorem ipsum dolor sit amet consectetur adipising elit, sed</div>
+			<div class="menu2-button">READ MORE</div>
+		</div>
+	</div>
+</div>
+
+<div class="contact">
+	<div class="contact-item"></div>
+	<div class="contact-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nostrum, labore in nulla saepe asperiores aut veritatis dicta minus qui.</div>
+	<div class="contact-title">Linda Steward</div>
+	<div class="contact-social">
+		<div class="contact-social-item1"></div>
+		<div class="contact-social-item2"></div>
+		<div class="contact-social-item3"></div>
+		<div class="contact-social-item4"></div>
+		<div class="contact-social-item5"></div>
+</div>
 </body>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
